Fix hairline fixed gap in EventsCal

--- a/src/css/components/EventsCalender.css
+++ b/src/css/components/EventsCalender.css
@@ -17,7 +17,7 @@
     position: sticky;
     z-index: 10000;
     background: #fbfbfbdd;
-    top: 0;
+    top: -1px;
 
     &::before {
       content: '';
